ndb - bug#49560 - cleanup error handling wrt Suma not started